--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,15 @@ version = "0.1.0"
 edition = "2024"
 description = "A tool to help find assignments of type k-m-n."
 license = "MIT OR Apache-2.0"
+# default run
+default-run = "kmn-pairs"
 
 [dependencies]
 rand = "0.9.2"
-text_io = "0.1.13"
+# serde = "1.0.228"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.145"
+# text_io = "0.1.13"
 
+[[bin]]
+name = "rank"
